# tinyvec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docs.md  premake5.lua
examples/: example.c
include/: tinyvec.h
src/: tinyvec.c
